--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -7,8 +7,7 @@ modules:
 
     config:
         WebDriver:
-          #  url: 'http://149.202.195.201:8113/'
-            url: 'https://dealer.veloxwheel.com/'
+            url: 'http://149.202.195.201:8113/'
             restart: false
             browser: chrome
             window_size: 1980x1780
