Sauce Labs test

--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -9,7 +9,7 @@ modules:
         WebDriver:
             url: 'http://149.202.195.201:8113/'
             restart: false
-            browser: chrome
+            browser: Internet Explorer
             window_size: 1980x1780
             #clear_cookies: false
 
@@ -18,6 +18,18 @@ modules:
 
            #host: 'hub.browserstack.com'
            #port: 80
+
+
+# -- run in SauceLabs
+
+            url: 'http://149.202.195.201:8113/'
+            host: 'obana:a0752bc8-c4db-443e-bacf-aa998fcb767c@ondemand.saucelabs.com'
+            port: 80
+            browser: Internet Explorer
+            capabilities:
+             platform: 'Windows 10'
+             window_size: 1980x1780
+
 
 
 # -- login in browserstack
@@ -31,9 +43,6 @@ modules:
              resolution: 1920x1080
              os: 'WINDOWS'
              os_version: 7
-
-
-
 
 
 
