--- a/codeception.yml
+++ b/codeception.yml
@@ -10,7 +10,13 @@ settings:
     colors: true
     memory_limit: 1024M
     strict_xml: true
-
+extensions:
+    enabled:
+        - Yandex\Allure\Adapter\AllureAdapter
+    config:
+        Yandex\Allure\Adapter\AllureAdapter:
+            deletePreviousResults: false
+            outputDirectory: allure-results
 
 
 modules:
